# astrazeneca-project-2025

./: .editorconfig  .env.example  .gitignore  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  experiments.toml  pyproject.toml
.devcontainer/: devcontainer.json
cho_analysis/: __init__.py
cho_analysis/core/: __init__.py  config.py  data_loader.py  logging.py  utils.py  visualization_utils.py
cho_analysis/task1/: __init__.py  advanced_batch_correction.py  batch_correction.py  correlation.py  marker_panels.py  ranking.py  visualization.py
cho_analysis/task2/: __init__.py  comparative_analysis.py  feature_significance.py  sequence_analysis.py  sequence_modeling.py  transgene_design.py  visualization.py
data/output/: Final feature genes post unsupervised ML.xlsx
docker/: Dockerfile  entrypoint.sh
docs/: README.md
docs/dev/: dev_setup.md
docs/project/: project_methodology.md  project_requirements.md  project_results.md
notebooks/: EDA.ipynb  Scanpy_v3.ipynb
report/: main.tex  references.bib  template.cls
results/tables/task1/: correction_validation_metrics.json  marker_panel_evaluation.csv  platform_bias_HiSeq.csv  platform_bias_NextSeq.csv  platform_bias_NovaSeq.csv  platform_consensus_markers.csv  ranked_markers.csv  residual_platform_effects.csv
results/tables/task2/: combined_sequence_features.csv  design_recommendations.json  feature_interactions.csv  feature_significance.csv  model_performance_metrics_cv.csv  optimal_feature_profiles.csv  optimization_impact.csv  reference_comparison_high_expression.csv  rna_structure_analysis.csv  selected_predictive_features_cv.csv  sequence_based_predictions_cv.csv  sequence_templates.json
scripts/: __init__.py  run_analysis.py
